# Purchasing_AI-assistant

./: .env.example  .gitignore  MVP_SCOPE.md  README.md  pyproject.toml
app/: __init__.py  main.py
docs/: 00_README.md  01_Регламент_подачи_и_обработки_заявок.md  03_Шаблон_заявки_на_услугу.md  05_Матрица_обязательных_полей.md  06_Правила_срочности_и_приоритета.md  08_Роли_и_ответственность.md  09_Правила_согласования.md  12_Глоссарий.md  approval_rule_engine.md  database_schema.md  hybrid_retrieval.md  knowledge_base_preparation.md  rag_indexing.md  Описание для проекта.docx  Оценка бюджета и экономической эффективности.docx  ТЗ для ИИ-ассистента по заявкам на закупку (2).docx
knowledge_base/: 00_README.md  01_Регламент_подачи_и_обработки_заявок.md  02_Шаблон_заявки_на_товар.md  03_Шаблон_заявки_на_услугу.md  04_Классификатор_категорий_закупок.md  05_Матрица_обязательных_полей.md  06_Правила_срочности_и_приоритета.md  07_Статусы_и_переходы.md  08_Роли_и_ответственность.md  09_Правила_согласования.md  10_FAQ_внутренних_заказчиков.md  11_Примеры_заявок.md  12_Глоссарий.md  13_Инструкция_по_работе_с_ассистентом.md  14_Типовые_ошибки_при_оформлении_заявок.md  manifest.json
scripts/: evaluate_approval_route.py  evaluate_retrieval.py  index_knowledge_base.py  prepare_knowledge_base.py  search_knowledge_base.py  validate_approval_rules.py
tests/: rag_helpers.py  test_approval_rule_repository.py  test_approval_rules.py  test_approval_rules_api_cli.py  test_approval_rules_sql.py  test_database_config.py  test_embeddings.py  test_health.py  test_hybrid_retrieval.py  (+10 more)
(+52 files in other folders)
